deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: hello-py-app
    strategy:
       type: RollingUpdate
       rollingUpdate:
          maxUnavailable: 0
          maxSurge: 100%          
    template:
       metadata:
          labels:
             app: hello-py-app
       spec:
          containers:
          - name: hello-py
            image: morinv/archlab-hello-py:v1
            ports:
              - name: web 
                containerPort: 80
